--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dotenv": "^10.0.0",
     "fastify": "^3.14.1",
     "fastify-formbody": "^5.0.0",
-    "fastify-static": "^4.0.0"
+    "fastify-static": "^4.0.0",
+    "fastify-cors": "^6.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
